@@ -1,7 +1,7 @@
 from setuptools import setup, find_packages
 setup(
     name='litecoin-python',
-    version='0.3',
+    version='0.3.1',
     description='Friendly Litecoin JSON-RPC API binding for Python',
     long_description='This package allows performing commands such as listing the current balance'
     ' and sending coins to the Satoshi (original) client from Python. The communication with the'
