@@ -37,8 +37,8 @@ source_suffix = '.rst'
 master_doc = 'index'
 
 # General information about the project.
-project = u'litecoin-python'
-copyright = u'2013, litecoin-python developers'
+project = 'litecoin-python'
+copyright = '2013, litecoin-python developers'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
@@ -173,8 +173,8 @@ htmlhelp_basename = 'litecoin-pythondoc'
 # Grouping the document tree into LaTeX files. List of tuples
 # (source start file, target name, title, author, documentclass [howto/manual]).
 latex_documents = [
-  ('index', 'litecoin-python.tex', u'litecoin-python Documentation',
-   u'Witchspace', 'manual'),
+  ('index', 'litecoin-python.tex', 'litecoin-python Documentation',
+   'Witchspace', 'manual'),
 ]
 
 # The name of an image file (relative to this directory) to place at the top of
